// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInputGroup matches snapshot in default state 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <div>
      <div
        class="flex flex-col mb-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <label
            aria-label="Current password"
            class="font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark"
            for="password-currentPassword"
          >
            Current password
          </label>
        </div>
      </div>
      <div
        class="relative"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          aria-label="password-currentPassword"
          aria-required="true"
          class="w-full h-[50px] px-4 pb-2 pt-[20px] peer font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark bg-transparent rounded-md border outline-none border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark disabled:cursor-not-allowed"
          id="password-currentPassword"
          name="password-currentPassword"
          type="password"
          value=""
        />
        <label
          aria-disabled="false"
          aria-hidden="false"
          class="left-4 -translate-y-1/2 absolute transition-all pointer-events-none top-[25px] peer-focus:top-4 font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body peer-focus:font-typography-body-light peer-focus:font-typography-body-light-weight peer-focus:text-typography-body-light peer-focus:leading-typography-body-light peer-focus:tracking-typography-body-light peer-focus:text-xs text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark"
          for="password-currentPassword"
        >
          Add current password
        </label>
        <button
          aria-label="Show password"
          class="absolute top-1/2 right-4 -translate-y-1/2 false"
          title="Show password"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-eye w-4 h-4 text-colour-onSurface dark:text-colour-onSurface-dark"
            data-icon="eye"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <div
        class="flex flex-col mb-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <label
            aria-label="New password"
            class="font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark"
            for="password-newPassword"
          >
            New password
          </label>
        </div>
      </div>
      <div
        class="relative"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          aria-label="password-newPassword"
          aria-required="true"
          class="w-full h-[50px] px-4 pb-2 pt-[20px] peer font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark bg-transparent rounded-md border outline-none border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark disabled:cursor-not-allowed"
          id="password-newPassword"
          name="password-newPassword"
          type="password"
          value=""
        />
        <label
          aria-disabled="false"
          aria-hidden="false"
          class="left-4 -translate-y-1/2 absolute transition-all pointer-events-none top-[25px] peer-focus:top-4 font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body peer-focus:font-typography-body-light peer-focus:font-typography-body-light-weight peer-focus:text-typography-body-light peer-focus:leading-typography-body-light peer-focus:tracking-typography-body-light peer-focus:text-xs text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark"
          for="password-newPassword"
        >
          Add new password
        </label>
        <button
          aria-label="Show password"
          class="absolute top-1/2 right-4 -translate-y-1/2 false"
          title="Show password"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-eye w-4 h-4 text-colour-onSurface dark:text-colour-onSurface-dark"
            data-icon="eye"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <div
        class="flex flex-col mb-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <label
            aria-label="Confirm new password"
            class="font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark"
            for="password-newPasswordConfirm"
          >
            Confirm new password
          </label>
        </div>
      </div>
      <div
        class="relative"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          aria-label="password-newPasswordConfirm"
          aria-required="true"
          class="w-full h-[50px] px-4 pb-2 pt-[20px] peer font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark bg-transparent rounded-md border outline-none border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark disabled:cursor-not-allowed"
          id="password-newPasswordConfirm"
          name="password-newPasswordConfirm"
          type="password"
          value=""
        />
        <label
          aria-disabled="false"
          aria-hidden="false"
          class="left-4 -translate-y-1/2 absolute transition-all pointer-events-none top-[25px] peer-focus:top-4 font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body peer-focus:font-typography-body-light peer-focus:font-typography-body-light-weight peer-focus:text-typography-body-light peer-focus:leading-typography-body-light peer-focus:tracking-typography-body-light peer-focus:text-xs text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark"
          for="password-newPasswordConfirm"
        >
          Confirm new password
        </label>
        <button
          aria-label="Show password"
          class="absolute top-1/2 right-4 -translate-y-1/2 false"
          title="Show password"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-eye w-4 h-4 text-colour-onSurface dark:text-colour-onSurface-dark"
            data-icon="eye"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordInputGroup matches snapshot in populated state 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <div>
      <div
        class="flex flex-col mb-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <label
            aria-label="Current password"
            class="font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark"
            for="password-currentPassword"
          >
            Current password
          </label>
        </div>
      </div>
      <div
        class="relative"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          aria-label="password-currentPassword"
          aria-required="true"
          class="w-full h-[50px] px-4 pb-2 pt-[20px] peer font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark bg-transparent rounded-md border outline-none border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark disabled:cursor-not-allowed"
          id="password-currentPassword"
          name="password-currentPassword"
          type="password"
          value="testCurrentPassword"
        />
        <label
          aria-disabled="false"
          aria-hidden="false"
          class="left-4 -translate-y-1/2 absolute transition-all pointer-events-none top-4 text-xs font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark"
          for="password-currentPassword"
        >
          Add current password
        </label>
        <button
          aria-label="Show password"
          class="absolute top-1/2 right-4 -translate-y-1/2 false"
          title="Show password"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-eye w-4 h-4 text-colour-onSurface dark:text-colour-onSurface-dark"
            data-icon="eye"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <div
        class="flex flex-col mb-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <label
            aria-label="New password"
            class="font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark"
            for="password-newPassword"
          >
            New password
          </label>
        </div>
      </div>
      <div
        class="relative"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          aria-label="password-newPassword"
          aria-required="true"
          class="w-full h-[50px] px-4 pb-2 pt-[20px] peer font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark bg-transparent rounded-md border outline-none border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark disabled:cursor-not-allowed"
          id="password-newPassword"
          name="password-newPassword"
          type="password"
          value="testNewPassword"
        />
        <label
          aria-disabled="false"
          aria-hidden="false"
          class="left-4 -translate-y-1/2 absolute transition-all pointer-events-none top-4 text-xs font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark"
          for="password-newPassword"
        >
          Add new password
        </label>
        <button
          aria-label="Show password"
          class="absolute top-1/2 right-4 -translate-y-1/2 false"
          title="Show password"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-eye w-4 h-4 text-colour-onSurface dark:text-colour-onSurface-dark"
            data-icon="eye"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <div
        class="flex flex-col mb-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <label
            aria-label="Confirm new password"
            class="font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark"
            for="password-newPasswordConfirm"
          >
            Confirm new password
          </label>
        </div>
      </div>
      <div
        class="relative"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          aria-label="password-newPasswordConfirm"
          aria-required="true"
          class="w-full h-[50px] px-4 pb-2 pt-[20px] peer font-typography-body font-typography-body-weight text-typography-body leading-typography-body tracking-typography-body text-colour-onSurface dark:text-colour-onSurface-dark bg-transparent rounded-md border outline-none border-colour-onSurface-outline dark:border-colour-onSurface-outline-dark disabled:cursor-not-allowed"
          id="password-newPasswordConfirm"
          name="password-newPasswordConfirm"
          type="password"
          value="testNewPasswordConfirm"
        />
        <label
          aria-disabled="false"
          aria-hidden="false"
          class="left-4 -translate-y-1/2 absolute transition-all pointer-events-none top-4 text-xs font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light tracking-typography-body-light text-colour-onSurface-subtle dark:text-colour-onSurface-subtle-dark"
          for="password-newPasswordConfirm"
        >
          Confirm new password
        </label>
        <button
          aria-label="Show password"
          class="absolute top-1/2 right-4 -translate-y-1/2 false"
          title="Show password"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-eye w-4 h-4 text-colour-onSurface dark:text-colour-onSurface-dark"
            data-icon="eye"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
